FIX: Fix text align

--- a/assets/css/button-marquee.css
+++ b/assets/css/button-marquee.css
@@ -9,6 +9,7 @@
   border-radius: 0.25rem; /* dynamic */
   padding-block: 0;
   cursor: pointer;
+  justify-content: center;
 }
 .deensimc-button,
 .deensimc-button-text {
